Created Navigation bar version 0.5. Needs additions and revisions but is ina  usable state. Various other minor changes to styl files.

--- a/src/stylus/_config.styl
+++ b/src/stylus/_config.styl
@@ -31,11 +31,11 @@ $default_site_colour = $neutral
 @font-face
   font-family SoftElegance
   font-style normal
-  src url($font_path + "SoftElegance.ttf")
+  src url($font_path + "SoftElegance.ttf") format(truetype)
 @font-face
   font-family Monofur
   font-style normal
-  src url($font_path + "monofur.ttf")
+  src url($font_path + "monofur.ttf") format(truetype)
 
 $main_font = "SoftElegance", sans-serif
 $code_font = "Monofur", monospace
