--- a/src/stylus/_grid.styl
+++ b/src/stylus/_grid.styl
@@ -11,13 +11,17 @@ riser_width($riser_num)
   max-width 100%
   clear both
   margin 0 auto
+  margin-bottom .3rem
 .pod /* Width restricted container 960px max */
   position relative
   width 100%
   max-width 96%
-  margin-left 5px
-  margin-right 5px
+  margin-left 1.75%
   box-sizing border-box
+  margin-bottom .3rem
+.row
+  min-width 1%
+  min-height 1%
 
 .riser-1
   width $1_riser_wth    
