--- a/src/stylus/layout.styl
+++ b/src/stylus/layout.styl
@@ -7,7 +7,7 @@
 @import '_buttons'
 @import '_tables'
 @import '_forms'
-@import '_lists'
+@import '_navigation'
 @import '_block'
 @import '_utilities'
 @import 'font-awesome/index.styl'
