--- a/src/stylus/_block.styl
+++ b/src/stylus/_block.styl
@@ -2,9 +2,11 @@
   margin-bottom 35px
   margin-left 10px
   img
-    max-width 90%
-    max-height 90%
-    margin-top 3%
+    max-width 75%
+    max-height 75%
+    margin-top 1.1rem
+    margin-bottom 1.1rem
+    margin-left 12.5%
   h1
     padding 0
     margin 0
@@ -18,9 +20,9 @@
     background-color lighten($default_site_colour, 5)
     padding 5px
     h3
-      margin-top 5px
-      margin-bottom 3px
-      margin-left 3px
+      margin-top 0.5px
+      margin-bottom 0.3px
+      margin-left 0.5rem
       font-weight bold
     h4
       margin-top 5px
@@ -36,6 +38,7 @@
       padding-top 10px
       margin-bottom 0
       margin-left 15px
+      margin-top 0
       font-size 1.4rem
       .fa
         background-color lighten($default_site_colour, 5)
@@ -46,7 +49,18 @@
           border-bottom-left-radius 4px
       li 
         width 95%
+        margin-bottom 1rem
         background-color lighten($default_site_colour, 20)
+      .li-title
+        width 30%
+        margin 0
+        margin-left 0.3rem
+        padding 2px
+        font-weight 600
+      .li-body
+        width 40%
+        margin 0
+        margin-left 0.2rem
       
     
     
