--- a/src/stylus/_visible_hidden.styl
+++ b/src/stylus/_visible_hidden.styl
@@ -2,46 +2,46 @@
   .hide-default
     display none
   .hide-s,.hide-m,.hide-l
-    display initial
+    display block
      
   .show-default
-    display initial 
+    display block 
   .show-s,.show-m,.show-l
     display none    
     
 @media (min-width 768px)
   .hide-default,.hide-m,.hide-l
-    display initial
+    display block
   .hide-s
     display none
     
   .show-default,.show-m,.show-l
     display none   
   .show-s
-    display initial
+    display block
 
     
 @media (min-width 992px)
   .hide-default,.hide-s,.hide-l
-    display initial
+    display block
   .hide-m
     display none
     
   .show-default.show-s,.show-l
     display none
   .show-m
-    display initial   
+    display block   
       
 @media (min-width 1200px)
   .hide-default,.hide-s,.hide-m
-    display initial
+    display block
   .hide-l
     display none
     
   .show-default,.show-s,.show-m
     display none
   .show-l
-    display initial
+    display block
 
 
 
