--- a/src/stylus/layout.styl
+++ b/src/stylus/layout.styl
@@ -1,6 +1,7 @@
 /* IMPORTS */
 @import '_config' 
 @import '_normalize'
+@import 'font-awesome/index.styl'
 @import '_grid'
 @import '_visible_hidden'
 @import '_typography'
@@ -9,5 +10,6 @@
 @import '_forms'
 @import '_navigation'
 @import '_block'
+@import '_banners_sliders'
 @import '_utilities'
-@import 'font-awesome/index.styl'
+
