--- a/src/stylus/_block.styl
+++ b/src/stylus/_block.styl
@@ -1,12 +1,14 @@
 .block
   margin-bottom 35px
-  margin-left 10px
+  margin-left 5px
+  margin-right 5px
   img
     max-width 75%
     max-height 75%
     margin-top 1.1rem
     margin-bottom 1.1rem
     margin-left 12.5%
+    margin-right 12.5%
   h1
     padding 0
     margin 0
