--- a/src/stylus/_navigation.styl
+++ b/src/stylus/_navigation.styl
@@ -16,7 +16,10 @@ ul.navi
     padding 0
     width 100%
     background darken($default_site_colour, 15)
-
+    -webkit-transition all 0.2s
+    -moz-transition all 0.2s
+    -ms-transition all 0.2s
+    -o-transition all 0.2s
     & li 
         position relative
         display inline-block
@@ -75,17 +78,9 @@ ul.navi
         list-style-type none
     
     & li ul li  
-        background-color #BBB 
-    & li > ul 
-        display none
-        position absolute
-        left 0
-        top 100%
-        z-index 999
-        width 100%
+        background-color #BBB
     
     & li > ul > li ul 
-        display none
         position absolute
         left 100%
         top 0
@@ -160,6 +155,28 @@ ul.navi
     &:hover, &:focus 
         background-color darken($default_site_colour, 17)
         color #FFF
+.caret
+    padding-left 3px
+.navi > li 
+    ul
+        opacity 0
+        position absolute
+        display inline-block
+        z-index 999
+        left 0
+        width 20rem
+        transtion opacity 0.2s
+        -webkit-transition opacity 0.2s
+        -moz-transition opacity 0.2s
+        -ms-transition opacity 0.2s
+        -o-transition opacity 0.2s
+.navi > li:hover
+    ul
+        opacity 1
+
+
+
+
 
 
 
