--- a/src/stylus/_forms.styl
+++ b/src/stylus/_forms.styl
@@ -1,6 +1,7 @@
 /* FORMS */
 form
-  margin-bottom 2.5rem  
+  margin-bottom 2.5rem
+  padding-top 2.5rem
   textarea 
     min-height 65px
     padding-top 6px
@@ -29,7 +30,7 @@ form
     margin-bottom 1.5rem
   input[type="email"],input[type="number"],input[type="search"],input[type="text"],input[type="tel"],input[type="url"],input[type="password"],textarea,select 
     height 24px
-    padding-left 2.5px
+    padding-left 0.25rem
     background-color #fff
     border 1px solid #D1D1D1
     box-shadow none
