Changed from Pixels to Rem units

--- a/src/stylus/_buttons.styl
+++ b/src/stylus/_buttons.styl
@@ -1,19 +1,19 @@
 /* Default Button with Transparent Background */
 .btn,button,input[type="submit"],input[type="reset"],input[type="button"]
   display inline-block
-  height 30px
-  padding 0 30px
+  height 3rem
+  padding 0 3rem
   color $default_font_colour
   text-align center
-  font-size 11px
+  font-size 1.1rem
   font-weight 400
-  line-height 30px
+  line-height 3rem
   letter-spacing .1rem
   text-transform uppercase
   text-decoration none
   white-space nowrap
   background-color transparent
-  border 1px solid #bbb
+  border .1rem solid #bbb
   cursor pointer
   box-sizing border-box 
   &:hover
