--- a/src/stylus/_forms.styl
+++ b/src/stylus/_forms.styl
@@ -3,9 +3,9 @@ form
   margin-bottom 2.5rem
   padding-top 2.5rem
   textarea 
-    min-height 65px
-    padding-top 6px
-    padding-bottom 6px
+    min-height 6.5rem
+    padding-top .6rem
+    padding-bottom .6rem
   label,legend 
     display block
     font-weight 600    
@@ -14,8 +14,8 @@ form
     border-width 0 
   label
     display inline-block
-    padding-right 5px
-    padding-left 5px
+    padding-right .5rem
+    padding-left .5rem
     .label-body 
       display inline-block
       margin-left .5rem
@@ -29,15 +29,15 @@ form
   select
     margin-bottom 1.5rem
   input[type="email"],input[type="number"],input[type="search"],input[type="text"],input[type="tel"],input[type="url"],input[type="password"],textarea,select 
-    height 24px
-    padding-left 0.25rem
+    height 2.4rem
+    padding-left .25rem
     background-color #fff
-    border 1px solid #D1D1D1
+    border .1rem solid #D1D1D1
     box-shadow none
     box-sizing border-box
-    margin-bottom 5px
+    margin-bottom .5rem
     &:focus
-      border 1px solid $neutral
+      border .1rem solid $neutral
       outline 0 
   input[type="email"],input[type="number"],input[type="search"],input[type="text"],input[type="tel"],input[type="url"],input[type="password"],textarea 
     -webkit-appearance none
