--- a/src/stylus/_images.styl
+++ b/src/stylus/_images.styl
@@ -8,7 +8,7 @@
     width 50%
     height auto
   .img-pod-text
-    padding-top 0.5rem
+    padding-top .5rem
     .img-title
       font-size 1.4rem
       font-weight bold
@@ -24,9 +24,9 @@
   img    
     float left
   .img-pod-text
-    padding-top 0.5rem
+    padding-top .5rem
     .img-title
-      top 0.5rem
+      top .5rem
       font-size 1.4rem
       font-weight bold
       margin-left 12rem
@@ -37,9 +37,8 @@
   .img-pod-horz
     margin-bottom 0
     img
-      margin 20px 30px
+      margin 2rem 3rem
       padding 0
     .img-pod-text
-      padding-top 20px
-    
+      padding-top 2rem
 
