--- a/src/stylus/_tables.styl
+++ b/src/stylus/_tables.styl
@@ -2,9 +2,9 @@
 table
   margin-bottom 2.5rem
 th,td 
-  padding 12px 15px
+  padding 1.2rem 1.5rem
   text-align left
-  border-bottom 1px solid #E1E1E1
+  border-bottom .1rem solid #E1E1E1
   &:first-child
     padding-left 0 
   &:last-child
