--- a/src/stylus/_block.styl
+++ b/src/stylus/_block.styl
@@ -1,7 +1,7 @@
 .block
-  margin-bottom 35px
-  margin-left 5px
-  margin-right 5px
+  margin-bottom 3.5rem
+  margin-left .5rem
+  margin-right .5rem
   img
     margin 0
     padding 0
@@ -16,35 +16,35 @@
     margin 0  
   .block-head
     background-color lighten($default_site_colour, 5)
-    padding 5px
+    padding .5rem
     h3
-      margin-top 0.5px
-      margin-bottom 0.3px
-      margin-left 0.5rem
+      margin-top .05rem
+      margin-bottom .03rem
+      margin-left .5rem
       font-weight bold
     h4
-      margin-top 5px
-      margin-bottom 3px
-      margin-left 3px
+      margin-top .5rem
+      margin-bottom .3rem
+      margin-left .3rem
       font-weight bold
   .block-body
-    padding-bottom 2px
+    padding-bottom .2rem
     background-color lighten($default_site_colour, 30)
     .block-list
       list-style none
-      padding-left 7.5px
-      padding-top 10px
+      padding-left .75rem
+      padding-top 1rem
       margin-bottom 0
-      margin-left 15px
+      margin-left 1.5rem
       margin-top 0
       font-size 1.4rem
       .fa
         background-color lighten($default_site_colour, 5)
-        padding 0.35rem 0.35rem 0.6rem 0.35rem
+        padding .35rem .35rem .6rem .35rem
       .round
         .fa
-          border-top-left-radius 4px
-          border-bottom-left-radius 4px
+          border-top-left-radius .4rem
+          border-bottom-left-radius .4rem
       li 
         width 95%
         margin-bottom 1rem
@@ -52,13 +52,13 @@
       .li-title
         width 30%
         margin 0
-        margin-left 0.3rem
-        padding 2px
+        margin-left .3rem
+        padding .2rem
         font-weight 600
       .li-body
         width 40%
         margin 0
-        margin-left 0.2rem
+        margin-left .2rem
       
     
     
