--- a/src/stylus/_navigation.styl
+++ b/src/stylus/_navigation.styl
@@ -1,12 +1,12 @@
 .navigation
     position relative
     background-color darken($default_site_colour,15)
-    text-shadow 0 1px 0 rgba(0,0,0,0.5)
+    text-shadow 0 .1rem 0 rgba(0,0,0,.5)
     width 100%
-    height 48px
-    line-height 48px
-    font-size 16px
-    padding 0 8px
+    height 4.8rem
+    line-height 4.8rem
+    font-size 1.6rem
+    padding 0 .8rem
     box-sizing border-box
     -moz-box-sizing border-box
     -webkit-box-sizing border-box
@@ -16,17 +16,17 @@ ul.navi
     padding 0
     width 100%
     background darken($default_site_colour, 15)
-    -webkit-transition all 0.2s
-    -moz-transition all 0.2s
-    -ms-transition all 0.2s
-    -o-transition all 0.2s
+    -webkit-transition all .2s
+    -moz-transition all .2s
+    -ms-transition all .2s
+    -o-transition all .2s
     & li 
         position relative
         display inline-block
         background darken($default_site_colour, 15)
         text-align center
     & > li  
-        margin-right -5px 
+        margin-right -.5rem 
     & > li:first-child  
         border-left 0 
     & > li:last-child  
@@ -34,27 +34,27 @@ ul.navi
     & li a 
         display block
         color #fff
-        padding 12px 24px 12px 24px
+        padding 1.2rem 2.4rem 1.2rem 2.4rem
         font-family 'FiraSans'
-        font-size 16px
+        font-size 1.6rem
         font-weight 600
         text-decoration none
-        text-shadow 0 1px 0 rgba(255,255,255,0.2)
-        transition background-color 0.5s ease-out
-        -o-transition background-color 0.5s ease-out
-        -moz-transition background-color 0.5s ease-out
-        -webkit-transition background-color 0.5s ease-out
+        text-shadow 0 .1rem 0 rgba(255,255,255,.2)
+        transition background-color .5s ease-out
+        -o-transition background-color .5s ease-out
+        -moz-transition background-color .5s ease-out
+        -webkit-transition background-color .5s ease-out
 
     & li a:hover 
         background-color lighten($default_site_colour, 5)
         text-decoration none
     
     & li .child-navi 
-        background none repeat scroll 0 0 rgba(0, 0, 0, 0.075)
+        background none repeat scroll 0 0 rgba(0, 0, 0, .075)
         position absolute
         right 0
         top 0
-        width 48px
+        width 4.8rem
         height 100%
         text-align center
         z-index 999
@@ -65,11 +65,11 @@ ul.navi
         display inline-block
         height 100%
         vertical-align middle
-        margin-right -0.25em
+        margin-right -.25em
     
     & li .child-navi > i 
         color #333
-        font-size 18px
+        font-size 1.8rem
         display inline-block
         vertical-align middle
     
@@ -101,8 +101,8 @@ ul.navi
     
     &.shrink li a 
         display block
-        border-bottom 1px solid rgba(0, 0, 0, 0.075)
-        border-top 1px solid rgba(0, 0 , 0, .075)
+        border-bottom .1rem solid rgba(0, 0, 0, .075)
+        border-top .1rem solid rgba(0, 0 , 0, .075)
         color #fff
         text-align center
         
@@ -111,7 +111,7 @@ ul.navi
         -webkit-box-sizing border-box
     
     &.shrink li .child-navi 
-        height 40px
+        height 4rem
     
     &.shrink li > ul 
         display none
@@ -122,19 +122,19 @@ ul.navi
 
 .btn-shrink
     position absolute
-    right 8px
+    right .8rem
     top 50%
-    width 40px
-    height 30px
+    width 4rem
+    height 3rem
     background-color darken($default_site_colour, 10)
-    border-color rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25)
-    border-radius 4px 4px 4px 4px
+    border-color rgba(0, 0, 0, .1) rgba(0, 0, 0, .1) rgba(0, 0, 0, .25)
+    border-radius .4rem .4rem .4rem .4rem
     border-style solid
-    border-width 1px
+    border-width .1rem
     color #FFFFFF
-    box-shadow 0 1px 0 rgba(255, 255, 255, 0.1) inset, 0 1px 0 rgba(255, 255, 255, 0.075)
-    padding 7px 10px
-    text-shadow 0 -1px 0 rgba(0, 0, 0, 0.25)
+    box-shadow 0 .1rem 0 rgba(255, 255, 255, .1) inset, 0 1px 0 rgba(255, 255, 255, .075)
+    padding .7rem 1rem
+    text-shadow 0 -.1rem 0 rgba(0, 0, 0, .25)
     cursor pointer
     text-align center
 
@@ -156,7 +156,7 @@ ul.navi
         background-color darken($default_site_colour, 17)
         color #FFF
 .caret
-    padding-left 3px
+    padding-left .3rem
 .navi > li 
     ul
         opacity 0
@@ -165,11 +165,11 @@ ul.navi
         z-index 999
         left 0
         width 20rem
-        transtion opacity 0.2s
-        -webkit-transition opacity 0.2s
-        -moz-transition opacity 0.2s
-        -ms-transition opacity 0.2s
-        -o-transition opacity 0.2s
+        transtion opacity .2s
+        -webkit-transition opacity .2s
+        -moz-transition opacity .2s
+        -ms-transition opacity .2s
+        -o-transition opacity .2s
 .navi > li:hover
     ul
         opacity 1
