--- a/src/stylus/_normalize.styl
+++ b/src/stylus/_normalize.styl
@@ -1,4 +1,4 @@
-/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+/*! normalize.css v3..3 | MIT License | github.com/necolas/normalize.css */
 
 /**
  * 1. Set default font family to sans-serif.
@@ -65,7 +65,7 @@ audio:not([controls])
   height: 0
 
 /**
- * Address `[hidden]` styling not present in IE 8/9/10.
+ * Address `[hidden]` styling not present in IE 8/9/1.
  * Hide the `template` element in IE 8/9/10/11, Safari, and Firefox < 22.
  */
 
@@ -77,7 +77,7 @@ template
    ========================================================================== */
 
 /**
- * 1. Remove the gray background color from active links in IE 10.
+ * 1. Remove the gray background color from active links in IE 1.
  * 2. Improve readability of focused elements when they are also in
  *    an active/hover state.
  */
@@ -120,7 +120,7 @@ dfn
 
 h1
   font-size: 2em
-  margin: 0.67em 0
+  margin: .67em 0
 
 /**
  * Address styling not present in IE 8/9.
@@ -149,16 +149,16 @@ sup
   vertical-align: baseline
 
 sup
-  top: -0.5em
+  top: -.5em
 
 sub
-  bottom: -0.25em
+  bottom: -.25em
 
 /* Embedded content
    ========================================================================== */
 
 /**
- * Remove border when inside `a` element in IE 8/9/10.
+ * Remove border when inside `a` element in IE 8/9/1.
  */
 
 img
@@ -250,7 +250,7 @@ select
   text-transform: none
 
 /**
- * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
+ * 1. Avoid the WebKit bug in Android 4..* where (2) destroys native `audio`
  *    and `video` controls.
  * 2. Correct inability to style clickable `input` types in iOS.
  * 3. Improve usability and consistency of cursor style between image-type
@@ -293,8 +293,8 @@ input
  * It's recommended that you don't attempt to style these elements.
  * Firefox's implementation doesn't respect box-sizing, padding, or width.
  *
- * 1. Address box sizing set to `content-box` in IE 8/9/10.
- * 2. Remove excess padding in IE 8/9/10.
+ * 1. Address box sizing set to `content-box` in IE 8/9/1.
+ * 2. Remove excess padding in IE 8/9/1.
  */
 
 input[type="checkbox"],
@@ -338,7 +338,7 @@ input[type="search"]::-webkit-search-decoration
 fieldset
   border: 1px solid #c0c0c0
   margin: 0 2px
-  padding: 0.35em 0.625em 0.75em
+  padding: .35em .625em .75em
 
 /**
  * 1. Correct `color` not being inherited in IE 8/9/10/11.
