--- a/src/stylus/_typography.styl
+++ b/src/stylus/_typography.styl
@@ -42,10 +42,10 @@ a
   color darken($default_site_colour, 25)
   font-size inherit
   text-decoration underline
-  text-shadow -.5px .4px 0 darken($default_site_colour, 15)
-  -moz-text-shadow -.5px .4px 0 darken($default_site_colour, 15)
-  -webkit-text-shadow -.5px .4px 0 darken($default_site_colour, 15)
-  -o-text-shadow -.5px .4px 0 darken($default_site_colour, 15)  
+  text-shadow -.05rem .04rem 0 darken($default_site_colour, 15)
+  -moz-text-shadow -.05rem .04rem 0 darken($default_site_colour, 15)
+  -webkit-text-shadow -.05rem .04rem 0 darken($default_site_colour, 15)
+  -o-text-shadow -.05rem .04rem 0 darken($default_site_colour, 15)  
   &:hover
     color darken($default_site_colour, 10)
 
@@ -57,8 +57,8 @@ code
   font-size 90%
   white-space nowrap
   background #F1F1F1
-  border 1px solid #E1E1E1
-  border-radius 4px
+  border .1rem solid #E1E1E1
+  border-radius .4rem
 pre > code 
   display block
   padding 1rem 1.5rem
