--- a/src/stylus/_utilities.styl
+++ b/src/stylus/_utilities.styl
@@ -10,20 +10,20 @@
 .pull 
   float left
 .round /* Makes any element have round corners */
-  border-radius 4px
+  border-radius .4rem
 .circle /* Use with images to make them into perfect circles */
   border-radius 50%
 .shadow-left
-  box-shadow -3px 4px 10px 2px rgba(0,0,0,0.3)
+  box-shadow -.3rem .4rem 1rem .2rem rgba(0,0,0,.3)
 .shadow-right 
-  box-shadow 3px 4px 10px 2px rgba(0,0,0,0.3)
+  box-shadow .3rem .4rem 1rem .2rem rgba(0,0,0,.3)
 
 /* MISC */
 hr
   margin-top 3rem
   margin-bottom 3.5rem
   border-width 0
-  border-top 1px solid #E1E1E1
+  border-top .1rem solid #E1E1E1
 dl,figure
   margin-bottom 2.5rem
 
