Minor font size changes made. Added 'colouring' section for easy background colour changing on the fly with classes

--- a/src/stylus/_block.styl
+++ b/src/stylus/_block.styl
@@ -30,6 +30,9 @@
   .block-body
     padding-bottom .2rem
     background-color lighten($default_site_colour, 30)
+    h1,h2,h3,h4,h5,h6
+      margin 0
+      font-weight bold
     .block-list
       list-style none
       padding-left .75rem
