--- a/src/stylus/_utilities.styl
+++ b/src/stylus/_utilities.styl
@@ -18,6 +18,16 @@
 .shadow-right 
   box-shadow .3rem .4rem 1rem .2rem rgba(0,0,0,.3)
 
+/* COLOURING */
+.good-bg
+  background-color $good
+.medium-bg
+  background-color $medium
+.bad-bg
+  background-color $bad
+.neutral-bg
+  background-color $neutral
+
 /* MISC */
 hr
   margin-top 3rem
